# ER-j-Manager

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  VERSION  docker-compose.yml  test.dlc
.github/: labeler.yml
.github/workflows/: ci-orchestrator.yml  pr-orchestrator.yml  release.yml  rollback.yml
backend/: README.md  jd_help_dump.txt  probe_jd.py  pyproject.toml  ruff.toml
backend/data/: settings.json
backend/src/: main.py
backend/src/api/: deps.py
backend/src/api/v1/: router.py
backend/src/api/v1/endpoints/: settings.py
backend/src/cnl/: decrypter.py  receiver.py
backend/src/core/: config.py  security.py
backend/src/domain/: models.py
backend/src/infrastructure/: api_interface.py  local_jd_api.py  mock_jd_api.py  settings_manager.py
backend/src/utils/: crx_packer.py
backend/static/: edge.crx
backend/static/extension_source/jd-manager-extension/: popup.js
backend/tests/: manual_verify_status.py  test_basic.py
browser-extension/: background.js  manifest.json  popup.html
docs/: index.html  jdownloader_api_reference.md
frontend/: .eslintrc.json  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/public/: manifest.json
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: Dashboard.tsx  SettingsModal.tsx
scripts/: compare_crx.py  inspect_crx.py  pack_crx.py  pack_crx3.py  preflight.sh  setup_local_ci.sh  version_manager.py
temp_ext/: background.js  manifest.json
